package patterns.structural.adapter

interface AndroidCharger {
    fun charge()
}