package patterns.structural.adapter

interface IphoneCharger {
    fun charge()
}