@startuml
class Client

class IPhoneToAndroidAdapter {
 + Android(adaptee)
}

interface IPhoneCharger {
    +charge()
}

interface AndroidCharger {
    +charge()
}

class Android
class IPhone

Client --> Android
IPhoneToAndroidAdapter <.. IPhoneCharger
Android --> IPhoneToAndroidAdapter
Android <.. AndroidCharger
IPhoneToAndroidAdapter --> AndroidCharger

@enduml